Fix button line alignment

--- a/css/a.css
+++ b/css/a.css
@@ -117,6 +117,7 @@ pre {
   margin-left: 2px;
   cursor: pointer;
   border-radius: 0;
+  line-height: 1;
 }
 
 .l {
